<resources>
    <string name="app_name">BaseBottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_note">Note</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Setting</string>
    <string name="title_home_popup">Home Popup</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_mylist">My List</string>
    <string name="title_help">Help</string>
    <string name="title_logout">Logout</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password ?</string>
    <string name="btn_link_to_register">Register Now</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_link_to_login">Login Now</string>
</resources>