<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24"
            android:title="@string/title_favorite" />
        <item
            android:id="@+id/nav_mylist"
            android:icon="@drawable/ic_mylist_black_24"
            android:title="@string/title_mylist" />
    </group>

    <item android:title="Guild and Customization">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting_black_24"
                android:title="@string/title_setting" />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24"
                android:title="@string/title_help" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_black_24"
        android:title="@string/title_logout" />

</menu>
