<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.basebottom.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.basebottom.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.basebottom.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.example.basebottom.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" >
        <action
            android:id="@+id/action_navigation_note_to_navigation_note_detail"
            app:destination="@id/navigation_note_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_note_detail"
        android:name="com.example.basebottom.ui.note.NoteDetailFragment"
        android:label="@string/title_note_detail"
        tools:layout="@layout/fragment_note_detail" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.basebottom.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>